# pyrepo-copier

./: .gitignore  Makefile  README.md  copier.yml  pyproject.toml  setup.cfg
.github/workflows/: autotag.yml  test.yml
hooks/: pre_gen_project.py
project/: .github_changelog_generator.jinja  .gitignore  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  tox.ini.jinja  {% if project_license == 'Apache-2.0' %}LICENSE{% endif %}.jinja  {% if project_license == 'BSD-3-Clause' %}LICENSE{% endif %}.jinja  {% if project_license == 'GPL-3.0' %}LICENSE{% endif %}.jinja  {% if project_license == 'MIT' %}LICENSE{% endif %}.jinja  {% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
project/.github/: ISSUE_TEMPLATE.md.jinja
project/.github/workflows/: ci.yml  ci.yml.jinja
project/src/{{module_name}}/: __init__.py.jinja
project/tests/: test_{{module_name}}.py.jinja
tests/: test_bake_project.py  test_generate.py
{{project_name}}/: .github_changelog_generator  .gitignore  README.md  pyproject.toml
{{project_name}}/src/{{project_slug}}/: __init__.py
